--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "gulp-webp": "^4.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "nodemon": "^2.0.1",
     "rollup": "^1.17.0"
   },
   "browserslist": [
     "last 2 version"
-  ]
+  ],
+  "dependencies": {
+    "mongoose": "^5.7.12"
+  }
 }
