--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "last 2 version"
   ],
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12"
   }
